Maybe fixed a margin issue on mobile hopefully maybe pls god

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -305,10 +305,6 @@ p:first-child {
     font-size: 13pt;
   }
 
-  .download-pdf-container {
-      margin-top: 30px; /* Adjust margin as needed */
-  }
-
   .header-title {
     font-size: 24px;
   }
@@ -368,7 +364,7 @@ p:first-child {
 
 .download-pdf-container {
     text-align: center;
-    margin-top: 20px; /* Adjust margin as needed */
+    margin-top: 40px; /* Adjust margin as needed */
 }
 
 .resume-container {
